--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="node_modules/angular-material/angular-material.css" />
 	</head>
 	<body class="is-preload">
-		<h2>Funcionou</h2>
+		<h2>Teste Router</h2>
 		<ui-view></ui-view>
 		<script src="node_modules/angular/angular.min.js"></script>
 		<script src="node_modules/angular-aria/angular-aria.min.js"></script>
