--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="node_modules/angular-material/angular-material.css" />
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" ng-app="app-bootcamp">
 		<h2 md-colors="{background:'blue-800'}">Teste Router</h2>
 		<ui-view></ui-view>
 		<script src="node_modules/angular/angular.min.js"></script>
