--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 		<link rel="stylesheet" href="node_modules/angular-material/angular-material.css" />
 	</head>
 	<body class="is-preload" ng-app="app-bootcamp">
-		<h2 md-colors="{background:'blue-800'}">Teste Router</h2>
-		<ui-view></ui-view>
+		<md-content>
+			<md-toolbar class="md-hue-2">
+				<div class="md-toolbar-tools">	  
+				  <h2 flex md-truncate>Toolbar with Disabled/Enabled Icon Buttons</h2>
+		  		  <md-button class="md-icon-button" aria-label="More">...</md-button>
+				</div>
+			  </md-toolbar>
+			  <ui-view></ui-view>
+		</md-content>
 		<script src="node_modules/angular/angular.min.js"></script>
 		<script src="node_modules/angular-aria/angular-aria.min.js"></script>
 		<script src="node_modules/angular-animate/angular-animate.min.js"></script>
