--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 		<script src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 		<script src="app/app.js"></script>
 		<script src="app/app.config.js"></script>
-		<script src="modules/apresentacao/apresentacao.js"></script>
+		<script src="modules/apresentacao/apresentacao.component.js"></script>
 	</body>
 </html>
